--- a/topic-0/topic-0-css/ej4/css/style.css
+++ b/topic-0/topic-0-css/ej4/css/style.css
@@ -18,19 +18,29 @@ aside{
 	font-size: 12px;
 	position:relative;
 }
-img{
+img{	
   display:inline-block;
-  width:30%;
-  height:30%;
+  width:100%;
+  height:100%;
   margin:20px;
+  position:relative;
+  overflow: hidden;
+}
+li{
+	position:relative;
+	display:inline-block;
+	width:30%;
+	height:100%;
+	list-style: none;
+	margin: 0;
 }
 .info{
-	width:100%;
+	width: 100%;
 	height:100%;
-	opacity:1;
+	opacity:100%;
 }
 .sidebar{
-	border: 0px solid #CCC;
+  border: 0px solid #CCC;
   padding: 1em;
   margin: 1em 0 1em 4em;
   width:40%;
@@ -41,7 +51,16 @@ img{
   margin: 1em 0 1em 4em;
   width:40%;
 }
-#container{
-  border: 0px solid #CCC;
-  width:100%;
+.info{
+ display: none;
+ position: absolute;
+ bottom: 0;
+ z-index: 10;
+ background: black;
+ width: 100%;
+ color: white;
+ padding: 0px;
+}
+li:hover .info{
+	display:block;
 }
