--- a/topic-0/topic-0-css/ej4/css/style.css
+++ b/topic-0/topic-0-css/ej4/css/style.css
@@ -5,20 +5,20 @@
 }
 
 html *{
-	font-family: "";
+	font-family: verdana;
 	background-color: #F2F2F2;
 	width:100%;
 	height:100%;
 }
 header{
-	font-family:"";
+	font-family: njnaruto;
 	font-size: 18px;
 	float:left;
 	display:inline-block;
 	position:relative;
 }
 aside{
-	font-family: "";
+	font-family:"Times New Roman";
 	display:inline-block;
 	float:right;
 	font-size: 12px;
@@ -46,6 +46,10 @@ p{
 	text-align: center;
 	font-family: ;
 }
+@font-face {
+    font-family: "njnaruto";
+    src: url(../fonts/njnaruto.ttf) format("truetype");
+}
 .sidebar{
   border: 0px solid #CCC;
   padding: 1em;
@@ -66,15 +70,17 @@ p{
  width: 100%;
  height:20%;
  padding: 0px;
-opacity:0.4;
-margin-left: 21px;
-margin-top:21px;
+ opacity:0.4;
+ margin-left: 21px;
+ margin-top:21px;
+
 }
 .text{
 	color:#0000FF;
-	font-family: ;
+    font-family: njnaruto;
 }
-li:hover{
+li:hover{ 
+    transition: all 3s ease-in-out;
 }
 li:hover .info{
 	display:block;
