--- a/topic-1-y-2/topic-1/style.css
+++ b/topic-1-y-2/topic-1/style.css
@@ -4,6 +4,10 @@ section{
 }
 .boton{
 	background-color: blue;
-	font-color: white;
+	color: white;
 	border-style: none;
+}
+.error{
+	background-color: red;
+	color: white;
 }
