--- a/topic-1-y-2/topic-2/style.css
+++ b/topic-1-y-2/topic-2/style.css
@@ -27,7 +27,7 @@ ul{
 }
 .btnCtrl{
 	margin-left: 50px;
-	margin-top: 300px;
+	margin-top: 80px;
 	padding: 20px;
 	padding-left: 170px;
 	padding-right: 170px;
@@ -47,4 +47,16 @@ ul{
  	padding: 20px;
  	font-size: 18px;
  	margin-left: 120px;
+}
+img{
+	width: 40%;
+	height: 40%;
+	margin-left: 400px;
+	margin-top: 20px;
+}
+.stat{
+	margin-left: 600px;
+	color: red;
+	font-size: 22px;
+	font-family: arial black;
 }
