--- a/topic-1-y-2/topic-2/style.css
+++ b/topic-1-y-2/topic-2/style.css
@@ -55,7 +55,9 @@ img{
 	margin-top: 20px;
 }
 .stat{
-	margin-left: 600px;
+	text-align: center;
+	margin-right: 35px;
+	margin-left: 0px;
 	color: red;
 	font-size: 22px;
 	font-family: arial black;
