--- a/topic-1-y-2/topic-2/style.css
+++ b/topic-1-y-2/topic-2/style.css
@@ -62,3 +62,9 @@ img{
 	font-size: 22px;
 	font-family: arial black;
 }
+.ulSoc{
+	font-size: 15px;
+	font-family: arial black;
+	color: #01DFD7;
+	text-align: center;
+}
