--- a/topic-3/css/style.css
+++ b/topic-3/css/style.css
@@ -1,3 +1,6 @@
+body{
+	background-color: gray;
+}
 ul{
 	list-style: none;
 }
@@ -25,7 +28,16 @@ li{
 }
 .btn{
 	font-size: 14px;
+	padding: 10px;
+	text-align: center;
+	background-color: white;
+	margin-top: 10px;
+	border-style:none;
 }
 .textClass{
 	visibility: hidden;
+}
+.param{
+	float: right;
+	font-family: arial black;
 }
