--- a/topic-3/css/style.css
+++ b/topic-3/css/style.css
@@ -63,8 +63,9 @@ li{
 	text-align: center;
 }
 .frm{
-	float:right;
-	margin-top: 0px;
+	position:absolute;
+	margin-left: 85%;
+	top: 100px;
 	margin-right:30px;
 	font-family: 'ka1';
 }
